--- a/CSS/gallery.css
+++ b/CSS/gallery.css
@@ -6,7 +6,9 @@
   box-sizing: border-box;
   font-family: 'Electrolize', sans-serif;
 }
-
+nav a{
+  font-size: 24px;
+}
 body {
   margin: 0;
 }
@@ -65,12 +67,17 @@ h1 {
   }
 
   .container {
-    padding: 55px;
+    padding: 10px 0px;
     color: white;
-    text-align: center;
-
+    background-color: rgba(14, 13, 12, 0.712);
+    position: relative;
+    top: 22px;
+    margin-bottom: 20px;
+  
   }
-
+  .container h2 {
+    text-align: center;
+  }
   .image-grid {
     width: 100%;
     --gap: 0px;
