--- a/CSS/hire.css
+++ b/CSS/hire.css
@@ -6,7 +6,9 @@
   box-sizing: border-box;
   font-family: 'Electrolize', sans-serif;
 }
-
+nav a{
+  font-size: 24px;
+}
 body {
   margin: 0;
 }
@@ -65,8 +67,15 @@ ul {
 }
 
 .container {
-  padding: 55px;
+  padding: 10px 0px;
   color: white;
+  background-color: rgba(14, 13, 12, 0.712);
+  position: relative;
+  top: 22px;
+  margin-bottom: 20px;
+
+}
+.container h2 {
   text-align: center;
 }
 
