--- a/CSS/index.css
+++ b/CSS/index.css
@@ -5,7 +5,10 @@
   margin: 0;
   box-sizing: border-box;
   font-family: 'Electrolize', sans-serif;
-  
+
+}
+nav a{
+  font-size: 24px;
 }
 
 body {
@@ -19,7 +22,7 @@ h1 {
   color: rgb(240, 237, 233);
   padding: 20px 0px 20px 0px;
   font-family: 'Electrolize', sans-serif;
- 
+
 
 
 }
@@ -27,6 +30,7 @@ h1 {
 a {
 
   color: rgb(202, 108, 31);
+  font-size: 23px;
 }
 
 li {
@@ -45,16 +49,17 @@ li {
   object-fit: cover;
 }
 
-.logo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    right: 50px;
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  right: 50px;
 
 }
-#logo{
-   position: relative;
+
+#logo {
+  position: relative;
   width: 70px;
   right: 50px;
   background-color: white;
@@ -72,15 +77,22 @@ ul {
 
 
 .container {
-  padding: 31px;
+  padding: 10px 0px;
   color: white;
+  background-color: rgba(14, 13, 12, 0.712);
+  position: relative;
+  top: 22px;
+  margin-bottom: 20px;
 
 }
-
-#welcomeh2{
+.container h2 {
   text-align: center;
-  
-  }
+}
+
+#welcomeh2 {
+  text-align: center;
+
+}
 
 
 input[type=text],
@@ -154,28 +166,28 @@ input[type=submit]:hover {
   }
 }
 
-.video-container{
+.video-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  
+
 }
 
 .container2 {
   width: 100%;
   height: 100%;
   padding: 2%;
-  
-  
+
+
 }
 
-#address{
+#address {
   display: flex;
   align-items: right;
   justify-content: right;
-  color:rgb(238, 131, 9);
+  color: rgb(238, 131, 9);
 }
 
-.icons{
+.icons {
   color: rgb(238, 131, 9);
 }
